--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Clone staging-ops repo, update image tags, and push tags
         env: 
           PAT: ${{ secrets.PAT }}
-        run: 
+        run: |
           git clone https://github.com/Tishathakral/argo-deployment-gitOps-learning-.git
           cd argo-deployment-gitOps-learning-
 
-          sed -i "s|image: tishathakral/quote-collector:[^[:space:]]*|image: tishathakral/quote-collector:$GITHUB_SHA|" manifest.yml
+          sed -i "s|image: tishathakral/quote-collector:.*|image: tishathakral/quote-collector:${{ github.sha }}|" manifest.yml
 
           git config user.name "Github Actions Bot"
           git config user.email "actions@github.com"
